//
// Copyright (C) 2025 The Android Open-Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package android.release_config_proto;
option go_package = "android/soong/release_config/release_config_proto";

message ReleaseConfigContributionsArtifact {
  // The name of the release config.
  optional string name = 1;

  // The release config contribution directories that may contribute to this
  // release config.
  repeated string contributing_directories = 2;
}

message ReleaseConfigContributionsArtifacts {
  // The artifacts
  repeated ReleaseConfigContributionsArtifact release_config_contributions_artifact_list = 1;
}
